--- a/README.qmd
+++ b/README.qmd
@@ -1,5 +1,5 @@
 ---
-title: Netlify Deploy Pre-rendered Site
+title: Netlify Deploy Site
 format: gfm
 ---
 
@@ -15,7 +15,7 @@ action <- yaml::read_yaml("action.yml")
 
 ```yaml
 - name: Deploy to Netlify 🚀
-  uses: data-intuitive/netlify-deploy-action@v1
+  uses: data-intuitive/netlify-deploy-site@v1
   with:
     auth: ${{ secrets.NETLIFY_AUTH_TOKEN }}
     site: 'my-netlify-site'
@@ -74,7 +74,7 @@ jobs:
 
       - name: Deploy to Netlify 🚀
         if: github.event_name != 'pull_request'
-        uses: data-intuitive/netlify-deploy-action@v1
+        uses: data-intuitive/netlify-deploy-site@v1
         with:
           auth: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           dir: '_site'
@@ -85,7 +85,7 @@ jobs:
       - name: Deploy preview
         id: deploy_preview
         if: github.event_name == 'pull_request'
-        uses: data-intuitive/netlify-deploy-action@v1
+        uses: data-intuitive/netlify-deploy-site@v1
         with:
           auth: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           dir: '_site'
